--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -6,6 +6,9 @@
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.full_name, {
+            label: 'Full Name'
+        }) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
