--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,10 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-{% include '_includes/filter.html.twig' %}
+    <div>
+        {% include '_includes/_filter.html.twig' %}
+    </div>
+    <div>
+        {% include '_includes/_vehicle_cards.html.twig' %}
+    </div>
 {% endblock %}
