--- a/templates/vehicle/index.html.twig
+++ b/templates/vehicle/index.html.twig
@@ -41,8 +41,16 @@
                 <td>{{ vehicle.status ? 'Yes' : 'No' }}</td>
                 <td>{{ vehicle.price }}</td>
                 <td>
-                    <a href="{{ path('app_vehicle_show', {'id': vehicle.id}) }}">show</a>
-{#                    <a href="{{ path('app_vehicle_edit', {'id': vehicle.id}) }}">edit</a>#}
+                    <a href="{{ path('app_vehicle_show', {'id': vehicle.id}) }}">Show</a>
+
+                    {% if is_granted("ROLE_ADMIN") %}
+                        <a href="{{ path('app_vehicle_edit', {'id': vehicle.id}) }}">Edit</a>
+                    {%endif%}
+
+                    {% if is_granted("ROLE_ADMIN") %}
+                        <a href="{{ path('app_vehicle_delete', {'id': vehicle.id}) }}">Delete</a>
+                    {%endif%}
+
                 </td>
             </tr>
         {% else %}
@@ -52,7 +60,9 @@
         {% endfor %}
         </tbody>
     </table>
+    {% if is_granted("ROLE_ADMIN") %}
+        <a href="{{ path('app_vehicle_new') }}">Create new</a>
+    {%endif%}
 
-{#    <a href="{{ path('app_vehicle_new') }}">Create new</a>#}
 
 {% endblock %}
