--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,23 +9,23 @@
         <title>Turbo</title>
         <!-- Google fonts -->
         <link href='https://fonts.googleapis.com/css?family=Poppins:300,400,500,600' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{{ asset('/styles/turbo.style.css') }}">
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <link rel="stylesheet" href="{{ asset('/css/style.css') }}">
+
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-{#        {% block stylesheets %}#}
-{#            {{ encore_entry_link_tags('app') }}#}
-{#        {% endblock %}#}
-
-{#        {% block javascripts %}#}
-{#            {{ encore_entry_script_tags('app') }}#}
-{#        {% endblock %}#}
     </head>
     <body>
+    <div class="navbarContainer">
+        {% include '/_includes/_navbar.html.twig' %}
+    </div>
+    <div class="blockContainer">
         {% block body %}{% endblock %}
+    </div>
+    <div class="footerContainer">
+        {% include '/_includes/_footer.html.twig' %}
+    </div>
     </body>
 </html>
