--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,8 +14,8 @@
             <div class="header-body" style="background: url('./img/turbo-banner-two.jpg') top center no-repeat; background-size: 100% 65%;">
                 <div class="container">
                     <h1>Welcome <strong>Be GREEN Be CLEAN</strong></h1>
-                    <p>Looking to rent a car for an upcoming vacation or business trip? In Be GREEN Be CLEAN, we make renting
-                        a car seamless so you can get right on your way. </p>
+                    <h2 class="rq-title no-padding">Looking to rent a car for an upcoming vacation or business trip? In Be GREEN Be CLEAN, we make renting
+                        a car seamless so you can get right on your way. </h2>
                     <div class="group-car-image">
                         <img src="img/banner-group-car.png" alt="">
                     </div>
