--- a/templates/_includes/_navbar.html.twig
+++ b/templates/_includes/_navbar.html.twig
@@ -18,6 +18,9 @@
                     <a href="{{ path('app_home') }}">Home</a>
                 </li>
                 <li>
+                    <a href="{{ path('app_listofcars') }}">Rent</a>
+                </li>
+                <li>
                     <a href="{{ path('app_about') }}">About Us</a>
                 </li>
                 <li>
