--- a/templates/_includes/_vehicles_cards.html.twig
+++ b/templates/_includes/_vehicles_cards.html.twig
@@ -15,6 +15,7 @@
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                         the card's content.</p>
                 </div>
+                <a href="" class="btn btn-primary">see details</a>
             </div>
         {% endfor %}
     </div>
