--- a/templates/_includes/_navbar.html.twig
+++ b/templates/_includes/_navbar.html.twig
@@ -26,12 +26,22 @@
                 <li>
                     <a href="{{ path('app_contact') }}">Contact Us</a>
                 </li>
+                {% if app.user %}
+                <li>
+                    <a href="{{ path('app_logout') }}">Logout</a>
+                    <p>Welcome {{ app.user.fullName }}</p>
+                </li>
+                <li>
+                    <a href="{{ path('app_reservation') }}">My reservations</a>
+                </li>
+                {% else %}
                 <li class="login-register-link right-side-link">
                     <a href="{{ path('app_login') }}">Login</a>
                 </li>
                 <li class="right-side-link last">
                     <a href="#">Admin</a>
                 </li>
+                {% endif %}
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
