--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,8 +19,8 @@
                     <div class="group-car-image">
                         <img src="img/banner-group-car.png" alt="">
                     </div>
-                    <div class="">
-                        <div class="rq-search-container">
+                    <div>
+                        <div class="rq-search-container search-bar-container-bg" style="background: #f3f3f3">
                             {% include '/_includes/_searchbar.html.twig' %}
                         </div> <!-- / .search-container -->
                     </div>
