--- a/templates/vehicle/searchedVehicle.html.twig
+++ b/templates/vehicle/searchedVehicle.html.twig
@@ -8,7 +8,7 @@
     {{ form_row(form) }}
     <button type="submit">Submit</button>
     {{ form_end(form) }}
-    <table class="table">
+    <table class="table my-5 py-5">
         <thead>
         <tr>
             <th>Id</th>
