--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}About{% endblock %}
 
 {% block body %}
 
@@ -13,19 +13,10 @@
     <div id="main-wrapper">
 
         <div class="rq-page-content">
-            <div class="inner-page-banner" style="background: url('img/inner-banner/about-us.jpg') top center no-repeat; background-size: cover;">
-                <div class="rq-overlay"></div>
-                <div class="container">
-                    <div class="rq-title-container bredcrumb-title">
-                        <h2 class="rq-title">About Us</h2>
-                        <ol class="breadcrumb rq-subtitle">
-                            <li><a href="#">Home</a></li>
-                            <li class="active">About Us</li>
-                        </ol>
-                    </div>
-                </div>
-            </div> <!-- /. inner pagebanner -->
             <div class="rq-content-block">
+                <div class="rq-title-container text-center">
+                    <h2 class="rq-title no-padding">About <strong>Us.</strong></h2>
+                </div>
                 <div class="rq-about-us-content-wrapper">
                     <div class="container">
                         <div class="about-us-content-single">
