--- a/templates/contactus.html.twig
+++ b/templates/contactus.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Contact Us{% endblock %}
 
 {% block body %}
 
@@ -11,21 +11,11 @@
         </div>
     </div>
     <div id="main-wrapper">
-
-        <div class="inner-page-banner" style="background: url('img/inner-banner/contact-us.jpg') top center no-repeat; background-size: cover;">
-            <div class="rq-overlay"></div>
-            <div class="container">
-                <div class="rq-title-container bredcrumb-title text-center">
-                    <h2 class="rq-title">Contact Us</h2>
-                    <ol class="breadcrumb rq-subtitle">
-                        <li><a href="#">Home</a></li>
-                        <li class="active">Contact Us</li>
-                    </ol>
-                </div>
-            </div>
-        </div> <!-- /. inner pagebanner -->
         <div class="rq-page-content">
             <div class="rq-content-block">
+                <div class="rq-title-container text-center">
+                    <h2 class="rq-title no-padding">Contact <strong>Us.</strong></h2>
+                </div>
                 <div class="container">
                     <div class="rq-contact-us-grid-block"> <!-- start info portion -->
                         <div class="row">
@@ -33,24 +23,22 @@
                                 <div class="grid-block-single">
                                     <i class="icon_mobile"></i>
                                     <h3>Phone</h3>
-                                    <p>Phone 01: (8801) 738 5678 64</p>
-                                    <p>Phone 02: (8801) 722 0008 99</p>
+                                    <p>Phone +33 661714439</p>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="grid-block-single">
                                     <i class="icon_pin_alt"></i>
                                     <h3>Address</h3>
-                                    <p>5th Floor, AH Building 1234 New Design </p>
-                                    <p>St. Melbourne, Australia</p>
+                                    <p>171 Rue Lucien Faure</p>
+                                    <p>33300 Bordeaux, France</p>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="grid-block-single">
                                     <i class="icon_mail_alt"></i>
                                     <h3>Email</h3>
-                                    <p>info@yourdomain.com</p>
-                                    <p>support@yourdomain.com</p>
+                                    <p>hello@contactus.com</p>
                                 </div>
                             </div>
                         </div>
