--- a/templates/car-listing-grid.html.twig
+++ b/templates/car-listing-grid.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Car listings Grid{% endblock %}
 
 {% block body %}
 
