--- a/templates/reservation.html.twig
+++ b/templates/reservation.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Reservation page{% endblock %}
 
 {% block body %}
 
