--- a/templates/_includes/_navbar.html.twig
+++ b/templates/_includes/_navbar.html.twig
@@ -16,7 +16,7 @@
                         <a href="{{ path('app_contact') }}">Contact Us</a>
                     </li>
                     <li>
-                        <a href="{{ path('app_login') }}">Login</a>
+                        <a href="{{ path('app_loginpage') }}">Login</a>
                     </li>
                     <li>
                         <a href="#">Admin</a>
