--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,10 +14,10 @@
             <div class="header-body" style="background: url('./img/turbo-banner-two.jpg') top center no-repeat; background-size: 100% 65%;">
                 <div class="container">
                     <h1>Welcome <strong>Be GREEN Be CLEAN</strong></h1>
-                    <h2 class="rq-title no-padding">Looking to rent a car for an upcoming vacation or business trip? In Be GREEN Be CLEAN, we make renting
+                    <h2 class="no-padding">Looking to rent a car for an upcoming vacation or business trip? In Be GREEN Be CLEAN, we make renting
                         a car seamless so you can get right on your way. </h2>
-                    <div class="group-car-image">
-                        <img src="img/banner-group-car.png" alt="">
+                    <div>
+                        <img class="group-car-image" src="{{ asset('/img/cars/carhomebanner.png') }}" alt="">
                     </div>
                     <div class="">
                         <div class="rq-search-container">
@@ -30,104 +30,7 @@
         </header> <!-- end header -->
 
         <div class="rq-page-content">
-            <div class="rq-content-block" id="cars">
-                <div class="rq-title-container text-center">
-                    <h2 class="rq-title no-padding">Most Popular <strong>Cars.</strong></h2>
-                </div>
-                <div class="rq-secondary-slider">
-                    <div class="owl-loop owl-carousel">
-                        <div class="item">
-                            <div class="car-details-bg">
-                                <span>$39/Days</span>
-                                <div class="owl-title-area">
-                                    <h4><a href="#">2016 BMW 2 Series 228i</a></h4>
-                                    <span class="rating">
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                    </span>
-                                </div>
-                            </div>
-                            <img src="img/tab-image/full-img1.png" data-img-src="" alt="">
-                            <h5><a href="#">2016 BMW 2 Series 228i</a></h5>
-                        </div>
-                        <div class="item">
-                            <div class="car-details-bg">
-                                <span>$39/Days</span>
-                                <div class="owl-title-area">
-                                    <h4><a href="#">2016 BMW 2 Series 228i</a></h4>
-                                    <span class="rating">
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                    </span>
-                                </div>
-                            </div>
-                            <img src="img/tab-image/full-img2.png" data-img-src="" alt="">
-                            <h5><a href="#">2016 BMW 2 Series 228i</a></h5>
-                        </div>
-                        <div class="item">
-                            <div class="car-details-bg">
-                                <span>$39/Days</span>
-                                <div class="owl-title-area">
-                                    <h4><a href="#">2016 BMW 2 Series 228i</a></h4>
-                                    <span class="rating">
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                    </span>
-                                </div>
-                            </div>
-                            <img src="img/tab-image/full-img3.png" data-img-src="" alt="">
-                            <h5><a href="#">2016 BMW 2 Series 228i</a></h5>
-                        </div>
-                        <div class="item">
-                            <div class="car-details-bg">
-                                <span>$39/Days</span>
-                                <div class="owl-title-area">
-                                    <h4><a href="#">2016 BMW 2 Series 228i</a></h4>
-                                    <span class="rating">
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                    </span>
-                                </div>
-                            </div>
-                            <img src="img/tab-image/full-img4.png" data-img-src="" alt="">
-                            <h5><a href="#">2016 BMW 2 Series 228i</a></h5>
-                        </div>
-                        <div class="item">
-                            <div class="car-details-bg">
-                                <span>$39/Days</span>
-                                <div class="owl-title-area">
-                                    <h4><a href="#">Audi Sport Red 1989</a></h4>
-                                    <span class="rating">
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                      <i class="ion-android-star"></i>
-                    </span>
-                                </div>
-                            </div>
-                            <img src="img/tab-image/full-img5.png" data-img-src="" alt="">
-                            <h5><a href="#">Audi Sport Red 1989</a></h5>
-                        </div>
-                    </div>
-                    <div class="browse-cars">
-                        <a href="#">Browse all cars</a>
-                    </div>
 
-                </div>
-            </div>
             <div class="rq-content-block gray-bg" id="services">
                 <div class="rq-title-container text-center">
                     <h2 class="rq-title no-padding">How it <strong>Work.</strong></h2>
