--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17611,7 +17611,7 @@ body .ui-tooltip {
   z-index: 99;
 }
 .header.index-two-header .header-body {
-  height: 980px;
+  height: 1080px;
 }
 .header.index-two-header .header-body h1 {
   font-size: 48px;
@@ -17632,9 +17632,8 @@ body .ui-tooltip {
 }
 .header.index-two-header .header-body .group-car-image {
   position: relative;
-  padding: 25px 0;
-  top: 60px;
-  margin-bottom: 30px;
+  width: 100%;
+  height: 10%;
 }
 .header.index-two-header .header-body .group-car-image img {
   width: 100%;
