--- a/templates/reservation.html.twig
+++ b/templates/reservation.html.twig
@@ -75,7 +75,7 @@
                                             <h4>Grand total<span>$227.05</span></h4>
                                         </div>
                                         <div class="rq-cart-options-content">
-                                            <button type="button" class="rq-btn rq-btn-primary btn-large fluid">proceed to checkout</button>
+                                            <button type="button" class="rq-btn rq-btn-primary btn-large fluid">Confirm rental</button>
                                             <p><a href="#">Checkout with multiple address</a></p>
                                         </div>
                                     </div>
