display admin buttun when you are connect as admin and super_admin

--- a/templates/_includes/_navbar.html.twig
+++ b/templates/_includes/_navbar.html.twig
@@ -19,7 +19,9 @@
                         <a href="{{ path('app_loginpage') }}">Login</a>
                     </li>
                     <li>
-                        <a href="#">Admin</a>
+                        {% if is_granted("ROLE_ADMIN") %}
+                        <a href="{{ path('admin') }}">Admin</a>
+                        {%endif%}
                     </li>
                 </ul>
         </div><!-- /.navbar-collapse -->
